fond de la nav fait, manque les lien, et logo il faut faire la forme (visuelle, changer le css et améliorer) ensuite faire le footer fond + forme

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -11,22 +11,36 @@
 
   <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand">FAGE</a>
+      <a class="navbar-brand">FAGE</a> <!-- Remplacer par logo qui emmenne a l'acceuil -->
 
       <ul class="navbar flex-row gap-3">
-        <li class="nav-item"><a class="nav-link" href="#">Accueil</a></li>  <!--les # c pour remplacer par les futur lien-->
-
-        <li class="nav-item dropdown">
-          <a class="nav-link" href="#">Nos actions ▾</a>
+        <li class="nav-item dropdown"><a class="nav-link" href="#">LA FAGE ▾</a> <!--les # c à remplacer par les futur lien-->
           <ul class="submenu">
-            <li><a href="#">Éducation</a></li>
-            <li><a href="#">Santé</a></li>
-            <li><a href="#">Logement</a></li>
+            <li><a href="#">Qui sommes-nous</a></li>
+            <li><a href="#">Évènement</a></li>
           </ul>
         </li>
 
-        <li class="nav-item"><a class="nav-link" href="#">Actualités</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+        <li class="nav-item dropdown"><a class="nav-link" href="#">Nos idées ▾</a>
+          <ul class="submenu">
+            <li><a href="#">Éducation</a></li>
+            <li><a href="#">Santé</a></li>
+          </ul>
+        </li>
+
+        <li class="nav-item dropdown"><a class="nav-link" href="#">Innovation sociale ▾</a>
+          <ul class="submenu">
+            <li><a href="#">Vivre en bonne santé</a></li>
+            <li><a href="#">S'engager dans la lutte contre la précarité</a></li>
+          </ul>
+        </li>
+
+        <li class="nav-item dropdown"><a class="nav-link" href="#">Service ▾</a>
+          <ul class="submenu">
+            <li><a href="#">La formation des bénévoles</a></li>
+            <li><a href="#">Financer ses projets</a></li>
+          </ul>
+        </li>
       </ul>
 
       <form class="d-flex" role="search">
@@ -38,8 +52,12 @@
     </div>
   </nav>
 
+  <!-- ajouter une image/ video ici-->
 </head>
 <body>
 
 </body>
+<footer>
+
+</footer>
 </html>
