manque toujours les liens, footer  (fond) est fait mtn faut faire la forme, il reste le body a faire et le logo a ajouter

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-  <link href="Acceuil.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="Acceuil.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
   <title>FAGE | Fédération des associations</title>
-
+<header>
   <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand">FAGE</a> <!-- Remplacer par logo qui emmenne a l'acceuil -->
+      <a class="navbar-brand">LOGO</a> <!-- Remplacer par logo qui emmenne a l'acceuil -->
 
       <ul class="navbar flex-row gap-3">
         <li class="nav-item dropdown"><a class="nav-link" href="#">LA FAGE ▾</a> <!--les # c à remplacer par les futur lien-->
@@ -45,19 +46,73 @@
 
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">
+        <button class="btn btnLoupe" type="submit">
           <i class="bi bi-search"></i>
         </button>
+
       </form>
     </div>
   </nav>
-
+</header>
   <!-- ajouter une image/ video ici-->
 </head>
 <body>
-
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
-<footer>
 
+
+
+
+<footer class="footer">
+  <br>
+  <img  class= "imageF" src="image/logoFage.png" rel="Logo">
+  <br><br><br>
+  <div class="footer-container">
+
+    <div class="footer-col">
+      <h5>LA FAGE</h5>
+      <ul>
+        <li><a href="#">Qui sommes-nous ?</a></li>
+        <li><a href="#">Nos idées</a></li>
+        <li><a href="#">Innovation sociale</a></li>
+        <li><a href="#">Service</a></li>
+      </ul>
+    </div>
+
+
+    <div class="footer-col">
+      <h5>NOS IDÉES</h5>
+      <ul>
+        <li><a href="#">Formation des bénévoles</a></li>
+        <li><a href="#">Evenement</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+
+
+    <div class="footer-col">
+      <h5>Suivez-nous</h5>
+      <div class="social-icons">
+        <a href="https://www.facebook.com/fage.officiel" target="_blank"><i class="bi bi-facebook"></i></a>
+        <a href="https://x.com/FAGEOfficiel" target="_blank"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://www.linkedin.com/company/fage" target="_blank"><i class="bi bi-linkedin"></i></a>
+      </div>
+    </div>
+
+
+    <div class="footer-col">
+      <h5>FAGE – Fédération des Associations Générales Étudiantes</h5>
+      <p>79 rue Périer 92120 Montrouge</p>
+      <p>Tél : <a href="tel:+33140337070">01.40.33.70.70</a></p>
+      <p>Membre de :</p>
+      <p>ESU | MedNet | CNAJEP</p>
+    </div>
+  </div>
+  <br><br>
+  <div class="footer-bottom">
+    <p><a href="#">Plan du site</a> | <a href="#">Newsletters de la FAGE</a> | <a href="#">Crédits</a> | <a href="#">Mentions légales</a> | <a href="#">Cookies & données personnelles</a></p>
+    <p>© FAGE</p>
+  </div>
 </footer>
+
 </html>
