--- a/Acceuil.html
+++ b/Acceuil.html
@@ -12,7 +12,7 @@
 <header>
   <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand">LOGO</a> <!-- Remplacer par logo qui emmenne a l'acceuil -->
+      <img class="imageLogo" src="image/logoFage.png" rel="Logo"> <!-- Remplacer par logo qui emmenne a l'acceuil -->
 
       <ul class="navbar flex-row gap-3">
         <li class="nav-item dropdown"><a class="nav-link" href="#">LA FAGE ▾</a> <!--les # c à remplacer par les futur lien-->
