--- a/Acceuil.html
+++ b/Acceuil.html
@@ -54,10 +54,125 @@
     </div>
   </nav>
 </header>
-  <!-- ajouter une image/ video ici-->
-</head>
+
 <body>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div id="carouselAccueil" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
+  <div class="carousel-inner">
+    <!-- Slide 1 -->
+    <div class="carousel-item active">
+      <img src="logo-fage.png" class="d-block w-100" alt="Solidarité">
+      <div class="carousel-caption d-flex flex-column align-items-center justify-content-center text-center">
+        <h1>Bienvenue à la FAGE</h1>
+        <p>La fédération des associations étudiantes</p>
+        <a href="#actions" class="btn btn-primary mt-3">En savoir plus</a>
+      </div>
+    </div>
+
+    <!-- Slide 2 -->
+    <div class="carousel-item">
+      <img src="Agence.png" class="d-block w-100" alt="Travail en groupe">
+      <div class="carousel-caption d-flex flex-column align-items-center justify-content-center text-center">
+        <h1>Éducation & Formation</h1>
+        <p>Apprendre et progresser ensemble</p>
+        <a href="#formation" class="btn btn-primary mt-3">En savoir plus</a>
+      </div>
+    </div>
+
+    <!-- Slide 3 -->
+    <div class="carousel-item">
+      <img src="solidarite.png" class="d-block w-100" alt="Solidarité">
+      <div class="carousel-caption d-flex flex-column align-items-center justify-content-center text-center">
+        <h1>Solidarité</h1>
+        <p>Des actions concrètes pour tous</p>
+        <a href="#solidarite" class="btn btn-primary mt-3">En savoir plus</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Contrôles -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselAccueil" data-bs-slide="prev">
+    <span aria-hidden="true"><i class="bi bi-chevron-left fs-2"></i></span>
+    <span class="visually-hidden">Précédent</span>
+  </button>
+
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselAccueil" data-bs-slide="next">
+    <span aria-hidden="true"><i class="bi bi-chevron-right fs-2"></i></span>
+    <span class="visually-hidden">Suivant</span>
+  </button>
+</div>
+
+
+<!-- Section Actualités -->
+<section id="actualites" class="py-5">
+  <div class="container">
+    <h2 class="section-title text-center mb-4">Actualités</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="solidarite.png" class="card-img-top" alt="Actu 1">
+          <div class="card-body">
+            <h5 class="card-title">Nouvelle réforme</h5>
+            <small class="text-muted">Publié le 20/09/2025</small>
+            <p class="card-text mt-2">Un résumé de l’actualité qui donne envie de cliquer pour en savoir plus...</p>
+            <a href="#" class="btn btn-outline-primary">Lire plus</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="Logo_FAGE.svg-2.png" class="card-img-top" alt="Actu 2">
+          <div class="card-body">
+            <h5 class="card-title">Soutien étudiant</h5>
+            <small class="text-muted">Publié le 15/09/2025</small>
+            <p class="card-text mt-2">Une autre actu avec plus de détails et des infos pertinentes pour les jeunes.</p>
+            <a href="#" class="btn btn-outline-primary">Lire plus</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100">
+          <img src="Agence.png" class="card-img-top" alt="Actu 3">
+          <div class="card-body">
+            <h5 class="card-title">Événement national</h5>
+            <small class="text-muted">Publié le 10/09/2025</small>
+            <p class="card-text mt-2">Résumé court de l’événement avec une image pour illustrer.</p>
+            <a href="#" class="btn btn-outline-primary">Lire plus</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Section Nos actions -->
+<section class="bg-light py-5">
+  <div class="container">
+    <h2 class="section-title text-center mb-4">Nos Actions</h2>
+    <div class="row g-4">
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100 text-center p-3">
+          <i class="bi bi-mortarboard fs-1 text-primary"></i>
+          <h5 class="mt-3">Formation</h5>
+          <p>Des formations pour bénévoles et responsables associatifs.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100 text-center p-3">
+          <i class="bi bi-cash-coin fs-1 text-primary"></i>
+          <h5 class="mt-3">Financement</h5>
+          <p>Aides pour lancer et gérer tes projets étudiants.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card shadow-sm h-100 text-center p-3">
+          <i class="bi bi-heart-fill fs-1 text-primary"></i>
+          <h5 class="mt-3">Solidarité</h5>
+          <p>Un engagement pour plus de justice sociale.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 </body>
 
 
