footer --> changement des nom des classe, et j'ai retirer les partie inutile dans le css (que pour le footer)
Il faut faire le menu burger, ajouter les page et les lier au lien, et changer les noms des classe de la nav et surtout du body

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -12,7 +12,7 @@
 <header>
   <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
-      <img class="imageLogo" src="image/logoFage.png" rel="Logo"> <!-- Remplacer par logo qui emmenne a l'acceuil -->
+      <a href="Acceuil.html"><img class="imageLogo" src="image/logoFage.png" rel="Logo" > </a>
 
       <ul class="navbar flex-row gap-3">
         <li class="nav-item dropdown"><a class="nav-link" href="#">LA FAGE ▾</a> <!--les # c à remplacer par les futur lien-->
@@ -180,11 +180,11 @@
 
 <footer class="footer">
   <br>
-  <img  class= "imageF" src="image/logoFage.png" rel="Logo">
+  <img  class= "imageFooter" src="image/logoFage.png" rel="Logo">
   <br><br><br>
-  <div class="footer-container">
+  <div class="footer-contenu">
 
-    <div class="footer-col">
+    <div class="footer-colonne">
       <h5>LA FAGE</h5>
       <ul>
         <li><a href="#">Qui sommes-nous ?</a></li>
@@ -195,7 +195,7 @@
     </div>
 
 
-    <div class="footer-col">
+    <div class="footer-colonne">
       <h5>NOS IDÉES</h5>
       <ul>
         <li><a href="#">Formation des bénévoles</a></li>
@@ -205,9 +205,9 @@
     </div>
 
 
-    <div class="footer-col">
+    <div class="footer-colonne">
       <h5>Suivez-nous</h5>
-      <div class="social-icons">
+      <div class="social-icons"> <!-- class pour les logo-->
         <a href="https://www.facebook.com/fage.officiel" target="_blank"><i class="bi bi-facebook"></i></a>
         <a href="https://x.com/FAGEOfficiel" target="_blank"><i class="bi bi-twitter-x"></i></a>
         <a href="https://www.linkedin.com/company/fage" target="_blank"><i class="bi bi-linkedin"></i></a>
@@ -215,7 +215,7 @@
     </div>
 
 
-    <div class="footer-col">
+    <div class="footer-colonne">
       <h5>FAGE – Fédération des Associations Générales Étudiantes</h5>
       <p>79 rue Périer 92120 Montrouge</p>
       <p>Tél : <a href="tel:+33140337070">01.40.33.70.70</a></p>
@@ -224,7 +224,7 @@
     </div>
   </div>
   <br><br>
-  <div class="footer-bottom">
+  <div class="footer-bas">
     <p><a href="#">Plan du site</a> | <a href="#">Newsletters de la FAGE</a> | <a href="#">Crédits</a> | <a href="#">Mentions légales</a> | <a href="#">Cookies & données personnelles</a></p>
     <p>© FAGE</p>
   </div>
