--- a/Acceuil.html
+++ b/Acceuil.html
@@ -1,141 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
+  <title>FAGE | Fédération des associations</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="Acceuil.css" rel="stylesheet">
+
+  <link href="assets/Acceuil.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
-  <title>FAGE | Fédération des associations</title>
-<header>
-  <nav class="navbar bg-body-tertiary">
-    <div class="container-fluid">
-      <a href="Acceuil.html"><img class="imageLogo" src="image/logoFage.png" rel="Logo" > </a>
-
-      <ul class="navbar flex-row gap-3">
-        <li class="nav-item dropdown"><a class="nav-link" href="#">LA FAGE ▾</a> <!--les # c à remplacer par les futur lien-->
-          <ul class="submenu">
-            <li><a href="#">Qui sommes-nous</a></li>
-            <li><a href="#">Évènement</a></li>
-          </ul>
-        </li>
-
-        <li class="nav-item dropdown"><a class="nav-link" href="#">Nos idées ▾</a>
-          <ul class="submenu">
-            <li><a href="#">Éducation</a></li>
-            <li><a href="#">Santé</a></li>
-          </ul>
-        </li>
-
-        <li class="nav-item dropdown"><a class="nav-link" href="#">Innovation sociale ▾</a>
-          <ul class="submenu">
-            <li><a href="#">Vivre en bonne santé</a></li>
-            <li><a href="#">S'engager dans la lutte contre la précarité</a></li>
-          </ul>
-        </li>
-
-        <li class="nav-item dropdown"><a class="nav-link" href="#">Service ▾</a>
-          <ul class="submenu">
-            <li><a href="#">La formation des bénévoles</a></li>
-            <li><a href="#">Financer ses projets</a></li>
-          </ul>
-        </li>
-      </ul>
-
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search"/>
-        <button class="btn btnLoupe" type="submit">
-          <i class="bi bi-search"></i>
-        </button>
-
-      </form>
-    </div>
-  </nav>
-</header>
-
+</head>
 <body>
-<div id="carouselAccueil" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
-  <div class="carousel-inner">
-    <!-- Slide 1 -->
-    <div class="carousel-item active">
-      <img src="logo-fage.png" class="d-block w-100" alt="Solidarité">
-      <div class="carousel-caption d-flex flex-column align-items-center justify-content-center text-center">
-        <h1>Bienvenue à la FAGE</h1>
-        <p>La fédération des associations étudiantes</p>
-        <a href="#actions" class="btn btn-primary mt-3">En savoir plus</a>
-      </div>
-    </div>
 
-    <!-- Slide 2 -->
-    <div class="carousel-item">
-      <img src="Agence.png" class="d-block w-100" alt="Travail en groupe">
-      <div class="carousel-caption d-flex flex-column align-items-center justify-content-center text-center">
-        <h1>Éducation & Formation</h1>
-        <p>Apprendre et progresser ensemble</p>
-        <a href="#formation" class="btn btn-primary mt-3">En savoir plus</a>
-      </div>
-    </div>
-
-    <!-- Slide 3 -->
-    <div class="carousel-item">
-      <img src="solidarite.png" class="d-block w-100" alt="Solidarité">
-      <div class="carousel-caption d-flex flex-column align-items-center justify-content-center text-center">
-        <h1>Solidarité</h1>
-        <p>Des actions concrètes pour tous</p>
-        <a href="#solidarite" class="btn btn-primary mt-3">En savoir plus</a>
-      </div>
-    </div>
+<!-- HEADER -->
+<nav class="navbar navbar-expand-lg fixed-top px-3" id="navbar">
+  <a class="navbar-brand" href="#"><img src="assets/image/LogoFageBlanc.png" class="logo-img" alt="Logo"></a>
+  <button class="navbar-toggler text-white" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="menu">
+    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">LA FAGE</a>
+        <ul class="dropdown-menu"><li><a class="dropdown-item" href="#">Qui sommes-nous</a></li><li><a class="dropdown-item" href="#">Évènement</a></li></ul>
+      </li>
+      <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">NOS IDEES</a>
+        <ul class="dropdown-menu"><li><a class="dropdown-item" href="#">Éducation</a></li><li><a class="dropdown-item" href="#">Santé</a></li></ul>
+      </li>
+      <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">INNOVATION SOCIALE</a>
+        <ul class="dropdown-menu"><li><a class="dropdown-item" href="#">Vivre en bonne santé</a></li><li><a class="dropdown-item" href="#">Lutte contre la précarité</a></li></ul>
+      </li>
+      <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">SERVICES</a>
+        <ul class="dropdown-menu"><li><a class="dropdown-item" href="#">Formation des bénévoles</a></li><li><a class="dropdown-item" href="#">Financer ses projets</a></li></ul>
+      </li>
+    </ul>
+    <button id="searchBtn" class="btn text-white ms-lg-3"><i class="bi bi-search fs-5"></i></button>
+    <input type="text" id="searchInput" placeholder="Rechercher...">
   </div>
+</nav>
 
-  <!-- Contrôles -->
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselAccueil" data-bs-slide="prev">
-    <span aria-hidden="true"><i class="bi bi-chevron-left fs-2"></i></span>
-    <span class="visually-hidden">Précédent</span>
-  </button>
-
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselAccueil" data-bs-slide="next">
-    <span aria-hidden="true"><i class="bi bi-chevron-right fs-2"></i></span>
-    <span class="visually-hidden">Suivant</span>
-  </button>
-</div>
-
-
-<!-- Section Actualités -->
-<section id="actualites" class="py-5">
+<!-- HERO -->
+<section class="hero d-flex flex-column justify-content-center align-items-center text-center text-white">
   <div class="container">
-    <h2 class="section-title text-center mb-4">Actualités</h2>
+    <h1 class="fw-bold mb-3">La FAGE, c’est bien plus qu’une fédération...</h1>
+    <p class="lead">Un mouvement d’étudiants engagés pour d’autres étudiants.</p>
+  </div>
+</section>
+
+<!-- ACTUALITÉS -->
+<section class="py-5">
+  <div class="container">
+    <h2 class="section-title text-center">Actualités</h2>
     <div class="row g-4">
       <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="solidarite.png" class="card-img-top" alt="Actu 1">
+        <div class="card h-100 shadow-sm">
+          <img src="assets/image/solidarite.png" class="card-img-top" alt="Actu 1">
           <div class="card-body">
             <h5 class="card-title">Nouvelle réforme</h5>
-            <small class="text-muted">Publié le 20/09/2025</small>
-            <p class="card-text mt-2">Un résumé de l’actualité qui donne envie de cliquer pour en savoir plus...</p>
+            <small class="text-muted">20/09/2025</small>
+            <p class="mt-2">Un résumé de l’actualité qui donne envie de cliquer...</p>
             <a href="#" class="btn btn-outline-primary">Lire plus</a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="Logo_FAGE.svg-2.png" class="card-img-top" alt="Actu 2">
+        <div class="card h-100 shadow-sm">
+          <img src="assets/image/Logo_FAGE.svg-2.png" class="card-img-top" alt="Actu 2">
           <div class="card-body">
             <h5 class="card-title">Soutien étudiant</h5>
-            <small class="text-muted">Publié le 15/09/2025</small>
-            <p class="card-text mt-2">Une autre actu avec plus de détails et des infos pertinentes pour les jeunes.</p>
+            <small class="text-muted">15/09/2025</small>
+            <p class="mt-2">Une autre actu avec des infos pertinentes pour les jeunes.</p>
             <a href="#" class="btn btn-outline-primary">Lire plus</a>
           </div>
         </div>
       </div>
       <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="Agence.png" class="card-img-top" alt="Actu 3">
+        <div class="card h-100 shadow-sm">
+          <img src="assets/image/Agence.png" class="card-img-top" alt="Actu 3">
           <div class="card-body">
             <h5 class="card-title">Événement national</h5>
-            <small class="text-muted">Publié le 10/09/2025</small>
-            <p class="card-text mt-2">Résumé court de l’événement avec une image pour illustrer.</p>
+            <small class="text-muted">10/09/2025</small>
+            <p class="mt-2">Résumé court de l’événement avec une image.</p>
             <a href="#" class="btn btn-outline-primary">Lire plus</a>
           </div>
         </div>
@@ -144,90 +90,43 @@
   </div>
 </section>
 
-<!-- Section Nos actions -->
+<!-- NOS ACTIONS -->
 <section class="bg-light py-5">
   <div class="container">
-    <h2 class="section-title text-center mb-4">Nos Actions</h2>
-    <div class="row g-4">
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100 text-center p-3">
-          <i class="bi bi-mortarboard fs-1 text-primary"></i>
-          <h5 class="mt-3">Formation</h5>
-          <p>Des formations pour bénévoles et responsables associatifs.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100 text-center p-3">
-          <i class="bi bi-cash-coin fs-1 text-primary"></i>
-          <h5 class="mt-3">Financement</h5>
-          <p>Aides pour lancer et gérer tes projets étudiants.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100 text-center p-3">
-          <i class="bi bi-heart-fill fs-1 text-primary"></i>
-          <h5 class="mt-3">Solidarité</h5>
-          <p>Un engagement pour plus de justice sociale.</p>
-        </div>
-      </div>
+    <h2 class="section-title text-center">Nos Actions</h2>
+    <div class="row g-4 text-center">
+      <div class="col-md-4"><div class="card h-100 shadow-sm p-3"><i class="bi bi-mortarboard fs-1 text-primary"></i><h5 class="mt-3">Formation</h5><p>Formations pour bénévoles et responsables.</p></div></div>
+      <div class="col-md-4"><div class="card h-100 shadow-sm p-3"><i class="bi bi-cash-coin fs-1 text-primary"></i><h5 class="mt-3">Financement</h5><p>Aides pour lancer et gérer tes projets.</p></div></div>
+      <div class="col-md-4"><div class="card h-100 shadow-sm p-3"><i class="bi bi-heart-fill fs-1 text-primary"></i><h5 class="mt-3">Solidarité</h5><p>Un engagement pour plus de justice sociale.</p></div></div>
     </div>
   </div>
 </section>
-</body>
 
-
-
-
-<footer class="footer">
-  <br>
-  <img  class= "imageFooter" src="image/logoFage.png" rel="Logo">
-  <br><br><br>
-  <div class="footer-contenu">
-
-    <div class="footer-colonne">
-      <h5>LA FAGE</h5>
-      <ul>
-        <li><a href="#">Qui sommes-nous ?</a></li>
-        <li><a href="#">Nos idées</a></li>
-        <li><a href="#">Innovation sociale</a></li>
-        <li><a href="#">Service</a></li>
-      </ul>
+<!-- FOOTER -->
+<footer>
+  <div class="container py-5">
+    <div class="row gy-4 text-center text-md-start">
+      <div class="col-md-3"><img src="assets/image/LogoFageBlanc.png" class="footer-logo mb-3" alt="Logo"></div>
+      <div class="col-md-3"><h5>LA FAGE</h5><ul class="list-unstyled"><li>Qui sommes-nous ?</li><li>Nos idées</li><li>Innovation sociale</li><li>Service</li></ul></div>
+      <div class="col-md-3"><h5>Suivez-nous</h5><div class="d-flex gap-3 fs-4 justify-content-center justify-content-md-start"><i class="bi bi-facebook"></i><i class="bi bi-twitter-x"></i><i class="bi bi-linkedin"></i></div></div>
+      <div class="col-md-3"><h5>Contact</h5><p>79 rue Périer, 92120 Montrouge</p><p>Tél : 01 40 33 70 70</p></div>
     </div>
-
-
-    <div class="footer-colonne">
-      <h5>NOS IDÉES</h5>
-      <ul>
-        <li><a href="#">Formation des bénévoles</a></li>
-        <li><a href="#">Evenement</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-
-
-    <div class="footer-colonne">
-      <h5>Suivez-nous</h5>
-      <div class="social-icons"> <!-- class pour les logo-->
-        <a href="https://www.facebook.com/fage.officiel" target="_blank"><i class="bi bi-facebook"></i></a>
-        <a href="https://x.com/FAGEOfficiel" target="_blank"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.linkedin.com/company/fage" target="_blank"><i class="bi bi-linkedin"></i></a>
-      </div>
-    </div>
-
-
-    <div class="footer-colonne">
-      <h5>FAGE – Fédération des Associations Générales Étudiantes</h5>
-      <p>79 rue Périer 92120 Montrouge</p>
-      <p>Tél : <a href="tel:+33140337070">01.40.33.70.70</a></p>
-      <p>Membre de :</p>
-      <p>ESU | MedNet | CNAJEP</p>
-    </div>
-  </div>
-  <br><br>
-  <div class="footer-bas">
-    <p><a href="#">Plan du site</a> | <a href="#">Newsletters de la FAGE</a> | <a href="#">Crédits</a> | <a href="#">Mentions légales</a> | <a href="#">Cookies & données personnelles</a></p>
-    <p>© FAGE</p>
+    <hr class="my-4">
+    <div class="text-center small">© 2025 FAGE — Tous droits réservés</div>
   </div>
 </footer>
 
+<script>
+  const navbar = document.getElementById('navbar');
+  const searchBtn = document.getElementById('searchBtn');
+  const searchInput = document.getElementById('searchInput');
+
+  window.addEventListener('scroll', () => {
+    navbar.classList.toggle('scrolled', window.scrollY > 200);
+  });
+
+  searchBtn.addEventListener('click', () => searchInput.classList.toggle('show'));
+</script>
+
+</body>
 </html>
